--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
@@ -24,6 +25,7 @@
       "not op_mini all"
     ],
     "development": [
+      "ie 11",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
