--- a/package.json
+++ b/package.json
@@ -3,19 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-object-assign": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "axios": "^0.19.2",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.1.0",
+    "css-loader": "3.4.2",
+    "es6-promise": "^4.2.8",
+    "eslint": "^6.6.0",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
-    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
-    "react-scripts": "3.4.1"
+    "resolve-url-loader": "3.1.1",
+    "sass-loader": "^7.3.1",
+    "style-loader": "0.23.1",
+    "url-loader": "2.3.0",
+    "webpack": "4.42.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "watch": "webpack --mode development --watch",
+    "build": "webpack --mode production"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +48,17 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react",
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime",
+      "@babel/transform-object-assign",
+      "@babel/plugin-proposal-class-properties"
     ]
   }
 }
