JI-1705 Add token to form data

--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
       "@babel/transform-object-assign",
       "@babel/plugin-proposal-class-properties"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.11"
   }
 }
