--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "scripts": {
     "watch": "webpack --mode development --watch",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -63,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "webpack-cli": "^3.3.12"
   }
 }
