--- a/package.json
+++ b/package.json
@@ -2,34 +2,39 @@
   "name": "h5p-hub-publish-ui",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "jest": "^28.1.2",
+    "webpack-cli": "^4.10.0"
+  },
   "dependencies": {
-    "@babel/core": "7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-object-assign": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "axios": "^0.21.2",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.1.0",
-    "css-loader": "3.4.2",
+    "@babel/core": "^7.18.6",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-object-assign": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "axios": "^0.27.2",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "es6-promise": "^4.2.8",
-    "eslint": "^6.6.0",
-    "eslint-loader": "3.0.3",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "^4.14.1",
+    "eslint": "^8.18.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-modal": "^3.11.2",
-    "react-transition-group": "^4.4.1",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "^7.3.1",
-    "style-loader": "0.23.1",
-    "url-loader": "2.3.0",
-    "webpack": "4.42.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
+    "react-transition-group": "^4.4.2",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "3.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
     "watch": "webpack --mode development --watch",
@@ -62,9 +67,5 @@
       "@babel/transform-object-assign",
       "@babel/plugin-proposal-class-properties"
     ]
-  },
-  "devDependencies": {
-    "jest": "^26.6.3",
-    "webpack-cli": "^3.3.12"
   }
 }
