--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "devDependencies": {
     "jest": "^28.1.2",
+    "sass": "^1.80.7",
+    "sass-loader": "^16.0.3",
+    "webpack": "^5.96.1",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
@@ -29,10 +32,8 @@
     "react-modal": "^3.15.1",
     "react-transition-group": "^4.4.2",
     "resolve-url-loader": "^5.0.0",
-    "sass-loader": "^13.2.2",
     "style-loader": "3.3.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.94.0",
     "webpack-cli": "^4.10.0"
   },
   "scripts": {
